# blockwise-parallel

./: .gitignore  flake.nix  package.json  paper.ipynb  paper.py  papers.py  presentation.ipynb  pyproject.toml  ring.py  scratch.py
.github/workflows/: codeql.yml  main_user-study-form.yml
